# FF_Player_C

./: .gitignore  build.gradle  build_ffmpeg.sh  config.gradle  gradle.properties  gradlew.bat  jitpack.yml  local.properties  readme.txt  settings.gradle
apks/TK-Stu-V1.0.53/apk/debug/: output-metadata.json
apks/TK-Stu-V1.0.53/apk/release/: output-metadata.json
apks/TK-Stu-V1.0.53/logs/: manifest-merger-debug-report.txt  manifest-merger-release-report.txt
apks/TK-Stu-V1.0.53/mapping/release/: configuration.txt  usage.txt
apks/TK-Stu-V1.0.53/sdk-dependencies/release/: sdkDependencies.txt
apks/ffplayer-1.0/apk/debug/: output-metadata.json
apks/ffplayer-1.0/apk/release/: output-metadata.json
apks/ffplayer-1.0/logs/: manifest-merger-debug-report.txt  manifest-merger-release-report.txt
apks/ffplayer-1.0/mapping/release/: configuration.txt  usage.txt
apks/ffplayer-1.0/sdk-dependencies/release/: sdkDependencies.txt
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
build_android/aarch64/include/libavutil/: ffversion.h
build_android/aarch64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
build_android/aarch64/share/ffmpeg/examples/: README
gradle/wrapper/: gradle-wrapper.properties
lib_ffmpeg/: build.gradle
lib_ffmpeg/src/androidTest/java/com/taike/lib_ffmpeg/: ExampleInstrumentedTest.kt
lib_ffmpeg/src/main/: AndroidManifest.xml
lib_ffmpeg/src/main/cpp/: CMakeLists.txt
lib_ffmpeg/src/main/cpp/include/: android_log.c  android_log.h
lib_ffmpeg/src/main/cpp/include/libavcodec/: avcodec.h  avdct.h  jni.h  mediacodec.h  vda.h  vdpau.h  videotoolbox.h  xvmc.h
lib_ffmpeg/src/main/cpp/include/libavdevice/: avdevice.h
lib_ffmpeg/src/main/cpp/include/libavfilter/: avfilter.h  buffersrc.h
lib_ffmpeg/src/main/cpp/include/libavformat/: avformat.h  avio.h
lib_ffmpeg/src/main/cpp/include/libavutil/: aes.h  aes_ctr.h  audio_fifo.h  avassert.h  avstring.h  base64.h  blowfish.h  bprint.h  buffer.h  camellia.h  cast5.h  channel_layout.h  common.h  cpu.h  crc.h  dict.h  encryption_info.h  error.h  eval.h  fifo.h  file.h  frame.h  hash.h  hmac.h  hwcontext.h  hwcontext_d3d11va.h  hwcontext_dxva2.h  hwcontext_vulkan.h  imgutils.h  lfg.h  log.h  lzo.h  mathematics.h  mem.h  murmur3.h  opt.h  parseutils.h  pixdesc.h  pixelutils.h  samplefmt.h  (+7 more)
lib_ffmpeg/src/main/cpp/include/libpostproc/: postprocess.h
lib_ffmpeg/src/main/cpp/include/libswresample/: swresample.h
lib_ffmpeg/src/main/cpp/include/libswscale/: swscale.h
lib_ffmpeg/src/main/cpp/jni/: AVMuxerBridge.cpp  FFPlayerBridge.cpp  Looper.cpp  VMLoader.cpp
lib_ffmpeg/src/main/cpp/jni/include/: FFPlayerBridge.h  Looper.h  VMLoader.h
lib_ffmpeg/src/main/cpp/player/: AMediaDecodeContext.cpp  AndroidLog.c  MediaDecoder.cpp  MediaDecoder.h  Muxer.c  Player.cpp  PlayerContext.cpp  PlayerInfo.cpp  RecorderContext.cpp  RecorderInfo.cpp  Resource.cpp  StateListener.cpp  Utils.cpp  util.hpp
lib_ffmpeg/src/main/cpp/player/include/: AMediaDecodeContext.h  AsyncQueue.hpp  JPlayerMethods.h  JPlayerObject.h  MediaDecoder.h  Muxer.h  Player.h  PlayerContext.h  PlayerInfo.h  PlayerResult.h  RecorderContext.h  RecorderInfo.h  Resource.h  StateListener.h  Utils.h
lib_ffmpeg/src/main/java/com/pcyfox/lib_ffmpeg/: AVMuxer.java  FFPlayer.java  OnMuxProgressListener.java  OnPlayStateChangeListener.java  OnRecordStateChangeListener.java  PlayState.java  RecodeState.java  RecordState.java
lib_ffmpeg/src/main/java/com/taike/lib_ffmpeg/: FFPlayer.java  OnPlayStateChangeListener.java  PlayState.java
lib_ffmpeg/src/test/java/com/pcyfox/lib_ffmpeg/: ExampleUnitTest.kt
lib_ffmpeg/src/test/java/com/taike/lib_ffmpeg/: ExampleUnitTest.kt
module_recorder/: build.gradle
module_recorder/src/androidTest/java/com/pcyfox/module_recoder/: ExampleInstrumentedTest.kt
module_recorder/src/androidTest/java/com/taike/module_recoder/: ExampleInstrumentedTest.kt
module_recorder/src/main/: AndroidManifest.xml
module_recorder/src/main/java/com/pcyfox/module_recoder/audio/: AudioRecorder.java  MediaConstants.java  RecorderContract.java
module_recorder/src/main/java/com/pcyfox/module_recoder/ui/activity/: LocalVideoPlayTestActivity.kt  MediaRecorderActivity.kt  OnlyRecorderActivity.kt  RMainActivity.kt  RecordeMulitVideoTestActivity.kt  RecordeMultiVideoTestActivity.kt  TestActivity.kt  TestRecorderActivity.kt  TestVideoVIewActivity.kt
module_recorder/src/main/java/com/pcyfox/module_recoder/ui/view/: AVRecorderCallback.kt  FVideoView.kt  RecorderView.kt
module_recorder/src/main/java/com/taike/module_recoder/audio/: AudioRecorder.java  MediaConstants.java  RecorderContract.java
module_recorder/src/main/java/com/taike/module_recoder/ui/activity/: MediaRecorderActivity.kt
module_recorder/src/main/res/layout/: activity_media_recoder.xml  module_recorder_activity_test.xml  recorde_activity_main.xml  recorde_activity_media_recoder.xml  recorder_activity_test.xml  recorder_activity_test_record_multi_video.xml
module_recorder/src/test/java/com/pcyfox/module_recoder/: ExampleUnitTest.kt
module_recorder/src/test/java/com/taike/module_recoder/: ExampleUnitTest.kt
